--- a/Sources/Poly/disjoint.tex
+++ b/Sources/Poly/disjoint.tex
@@ -28,7 +28,7 @@ type variables, and \rref{FD-forall} for disjoint quantification.
 \Rref{FD-tvarL} and the symmetric one \rref*{FD-tvarR} state that a type
 variable $[[X]]$ is disjoint with some type $[[B]]$ if its
 disjointness constraint (i.e., $[[A]]$) in the context $[[DD]]$ is a subtype of
-$[[B]]$. These two rules are a specialization of a more general lemma, which
+$[[B]]$. These two rules are a specialization of a more general lemma~\citep{alpuimdisjoint}, which
 says that disjointness is covariant with respect to subtyping. In a more precise
 sense, we have the following:
 
