--- a/Sources/Poly/typesystem.tex
+++ b/Sources/Poly/typesystem.tex
@@ -54,7 +54,7 @@ difference from \fname. The \fname calculus follows \oname where they add a
 disjointness condition $[[ A ** B ]]$ in \rref{swft-and}. This is crucial for
 them to ensure coherence due to their syntactic proof method, it also
 complicates the metatheory a lot with extra efforts required to show that all
-types in \fname is well-formed. In particular, they only have a weaker version
+types in \fname are well-formed. In particular, they only have a weaker version
 of the substitution lemma, shown in \cref{lemma:weaker_lemma}: the general
 substitution lemma as shown in \cref{lemma:general_lemma} does not hold in
 \fname, but holds in \fnamee.
