--- a/Sources/Polymorphism.tex
+++ b/Sources/Polymorphism.tex
@@ -6,7 +6,7 @@
 
 In this chapter, we are going to enrich \namee with parametric polymorphism. As
 we will see in later chapters, the combination is very expressive, able to express sophisticated
-concepts such as mixins/traits and a highly modular form of visitors. The
+concepts such as mixins/traits and a highly modular form of visitors~\citep{oliveira09modular, togersen:2004}. The
 combination is also highly challenging in that coherence becomes even harder to
 prove than in the simply typed setting. We present \fnamee, the first typed
 calculus combining disjoint polymorphism with BCD subtyping. \fnamee is a
@@ -30,4 +30,5 @@ typed first-class traits, which will be introduced in \cref{chap:traits}.
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../Thesis"
+%%% org-ref-default-bibliography: ../Thesis.bib
 %%% End:
