--- a/Thesis.bib
+++ b/Thesis.bib
@@ -25,6 +25,18 @@
   year={2012},
 }
 
+
+
+@InProceedings{Laurent18b,
+  author    = {Olivier Laurent},
+  title     = {Intersection Subtyping with Constructors},
+  booktitle = {Proceedings of the Ninth Workshop on {I}ntersection {T}ypes and {R}elated {S}ystems},
+  year      = {2018}
+}
+
+
+
+
 @techreport{pierce1989decision,
   title={A decision procedure for the subtype relation on intersection types with bounded variables},
   author={Pierce, Benjamin C},
@@ -521,12 +533,6 @@ year		= {2007},
 	journal = {Science of Computer Programming}
 }
 
-@inproceedings{xuan_traits,
-  title={Typed First-Class Traits},
-  author={Bi, Xuan and Oliveira, Bruno C. d. S.},
-  booktitle={European Conference on Object-Oriented Programming},
-  year={2018},
-}
 
 @phdthesis{ahmed2004semantics,
   title={Semantics of types for mutable state},
@@ -1463,4 +1469,11 @@ booktitle = {Archiv. Math. Logik}
  editor = {Naur, Peter and Randell, Brian},
  title = {Software Engineering: Report of a Conference Sponsored by the NATO Science Committee, Garmisch, Germany, 7-11 Oct. 1968, Brussels, Scientific Affairs Division, NATO},
  year = {1969},
+}
+
+@phdthesis{pierce1991programming,
+  title={Programming with intersection types and bounded polymorphism},
+  author={Pierce, Benjamin C},
+  year={1991},
+  school={Citeseer}
 }
