--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -4,21 +4,21 @@
 \label{chap:nested}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-This chapter presents \namee, a calculus based on \oname~\citep{oliveira2016disjoint} with disjoint intersection types that
+This chapter presents \namee\footnote{It was also called \name in the original publication~\citep{bi_et_al:LIPIcs:2018:9227}.}, a calculus based on \oname~\citep{oliveira2016disjoint} with disjoint intersection types that
 features both BCD-style subtyping and the merge operator, which we believe
-capture the essence of nested composition. We illustrate this by presenting a
+captures the essence of nested composition. We illustrate this by presenting a
 solution to the expression problem based on family polymorphism. We then discuss
 the algorithmic aspects of \namee. The coherence property of \namee is discussed
 in \cref{chap:coherence:simple}.
 
-\section{Overview}
+\section{Introduction}
 
 \namee is a simple calculus with records and disjoint intersection types that
 supports \emph{nested composition}. Nested composition enables encoding simple
 forms of family polymorphism. More complex forms of family polymorphism,
 involving binary methods~\citep{bruce1995binary} and mutable state are not yet
 supported, but are interesting avenues for future work. Nevertheless, in \namee,
-it is possible, for example, to encode \citeauthor{Ernst_2001}'s elegant family-polymorphism
+it is possible, for example, to encode \citeauthor{ernst2004expression}'s elegant family-polymorphism
 solution to the expression problem. Compared to \oname the essential novelty of
 \namee are distributivity rules between function/record types and intersection
 types. These rules are the delta that enable extending the simple forms of
@@ -55,22 +55,7 @@ to guarantee the uniqueness of the elaboration and thus allow for a simple
 syntactic proof of coherence. Most
 importantly, it makes it hard or impossible to adapt the proof to extensions of
 the calculus, such as the new subtyping rules required by the BCD system.
-
-In \namee we remove the brittleness of the previous syntactic method to prove
-coherence, by employing a more semantic proof method based on \emph{logical
-  relations}~\citep{tait, plotkin1973lambda, statman1985logical}. This new proof method has several
-advantages. Firstly, with the new proof method, several restrictions that were
-enforced by \oname to enable the syntactic proof are removed. For example
-the work on \oname has to carefully distinguish between \emph{top-like types} and other types.
-%This is necessary because top-like types can be
-%non-disjoint (unlike other types), and yet they need to be allowed in a calculus
-%with top types.
-In \namee this distinction is not necessary; top-like types are handled like all
-other types. Secondly, the new proof method is more powerful because it is based
-on observational equivalence rather than syntactic equality; it is more robust
-when the type system is extended. Finally, the removal of the ad-hoc
-side-conditions makes adding new extensions, such as support for BCD-style
-subtyping, easier. We shall return to this point in
+We shall return to this point in
 \cref{chap:coherence:simple}.
 
 
