--- a/Sources/Poly/elaboration.tex
+++ b/Sources/Poly/elaboration.tex
@@ -59,7 +59,7 @@ $ [[\c v]] $ is ``equal'' to $[[ \X . c (v X) ]]$, which is why we can treat $[[
   \centering
 \begin{tabular}{|l|l||l|l|}
 \hline
-Coercion & Term & Coercion & Term \\ \hline
+\textbf{Coercion} & \textbf{Term} & \textbf{Coercion} & \textbf{Term} \\ \hline
 $[[id]]$         & $[[ \x . x]]$  & $[[ c1 o c2  ]]$    &  $[[  \x . c1 (c2 x) ]]$     \\ \hline
 $[[top]]$         & $[[ \x . unit ]]$  & $[[ c1 -> c2  ]]$    &  $[[  \f . \x . c2 (f (c1 x))  ]]$     \\ \hline
 $[[  pp1   ]]$         & $[[ \x . pp1 x    ]]$  & $[[ pp2  ]]$    &  $[[  \x . pp2 x  ]]$     \\ \hline
@@ -199,27 +199,30 @@ As with \namee, we show two lemmas that relate \fnamee to \tnamee.
 
 We extend the algorithmic subtyping for \namee with two rules
 \rref*{A-forall,A-var}, as shown in \cref{fig:algo:sub:fi}. They are simple
-adaptions from their declarative counterparts. We also need to extend the
-definition of rigid types to include type variables and disjoint quantification,
-shown in \cref{def:rigid:extended}.
+adaptions from their declarative counterparts. Note that they all have empty
+$[[fs]]$ because neither polymorphic types nor type variables have subtyping
+relations with function types. We also need to extend the definition of rigid
+types to include type variables and disjoint quantification, shown in
+\cref{def:rigid:extended}, because as we can see in \cref{fig:subtype_decl:fi},
+they do not have distributivity rules.
 
 \begin{definition}[Rigid types, extended] \label{def:rigid:extended}
   \begin{mathpar}
     [[  pri rigid  ]] \and
-    [[ X  rigid ]] \and
-    [[ \X ** A . B rigid ]]
+    \hlmath{[[ X  rigid ]]} \and
+    \hlmath{[[ \X ** A . B rigid ]]}
   \end{mathpar}
 \end{definition}
 
 Finally we show the correctness of the algorithmic subtyping:
 
-\begin{theorem}[Soundness]
+\begin{conjecture}[Soundness]
   If $[[ fs |- A <: B ~~> c]]$ then $ [[   A <: fs -> B ~~> c  ]]   $.
-\end{theorem}
+\end{conjecture}
 
-\begin{theorem}[Completeness]
+\begin{conjecture}[Completeness]
   If $[[A <: B ~~> c]]$ then there exists $[[c']]$ such that $[[ [] |- A <: B ~~> c']]$.
-\end{theorem}
+\end{conjecture}
 
 
 
