--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -284,8 +284,10 @@ inheritance. This makes reasoning a lot simpler.
 
 \section{Contributions}
 
-In this thesis, we present three new typed calculi, each building on top of the
-previous one.
+In this thesis, we present three new typed calculi, starting from a simple
+calculus with disjoint intersection types, then adding parametric polymorphism
+and finally ending up with a relatively sophisticated object-oriented language
+with support for first-class traits.
 
 \paragraph{The \namee Calculus.}
 
@@ -440,8 +442,8 @@ structure of the technical content in the thesis is divided into three parts:
   conduct a case study of modularizing programming language features using a
   highly modular form of \visitor.
 \end{description}
-Finally \cref{sec:related} reviews related work and \cref{chap:conclusion}
-presents some future work and concludes.
+\Cref{sec:related} reviews related work, \cref{chap:future} presents some future
+work and finally \cref{chap:conclusion} concludes.
 
 This thesis is largely based on two publications by the author, which are shown
 in the list below with corresponding chapters indicated. The work on \fnamee is
