--- a/Sources/Poly/overview.tex
+++ b/Sources/Poly/overview.tex
@@ -93,7 +93,7 @@ While \citet{alpuimdisjoint} studied the combination of disjoint intersection
 types and parametric polymorphism, they follow the then-standard approach
 of \citet{oliveira2016disjoint} to ensure coherence, thus excluding the
 possibility of adding BCD subtyping. The combination of BCD subtyping and
-disjointness polymorphism opens room for more expressiveness. For example, we can
+disjointness polymorphism opens doors for more expressiveness. For example, we can
 define the following function
 \begin{lstlisting}
 combine A [B * A] (f : {foo : Int -> A})
