--- a/Thesis.tex
+++ b/Thesis.tex
@@ -251,7 +251,8 @@ diploma or other qualifications.
 
 
   \include{Sources/Related}
-  \input{Sources/Conclusion.mng}
+  \input{Sources/Future.mng}
+  \include{Sources/Conclusion}
 
 
   \appendix
