--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -31,7 +31,7 @@ increasing expressiveness:
 We hope that the concepts and the methods described in this thesis may serve as
 a helpful guide to researchers and programmers alike in their attempts to
 understand and build better software. Thus this thesis serves as a stepping
-stone for further investigation of disjoint intersection types in conjuncture
+stone for further investigation of disjoint intersection types in conjunction
 with other type disciplines. A great number of open questions, new research
 directions lie ahead!
 
